@startuml "Livl Weather"

skinparam roundcorner 10

class Forecast {
    date
    windDirection
    windSpeed
    humidity
    visibility
    seaPressure
    stationPressure
    barometer
    temperature
    minTeperature
    maxTemperature
    groundLayerHeight
    precipitation
}

class Station {
    name
    latitude
    longitude
}

class Region {
    name
}

class Code4677 {
    {static}code
    description
}

Station "1" -- "0..*" Forecast : forecasts
Station "0..*" -- "1" Region : located in

Region "*" -- "0..*" Region : adjacent to

Forecast "0..*" -- "1" Code4677 : weathercode

@enduml